fix text overlapping button as required

--- a/styles.css
+++ b/styles.css
@@ -497,13 +497,8 @@ form input[type=submit] {
   }
 
   #about-heading p {
-    height: 92px;
+    height: 7%;
     width: 50%;
-  }
-
-  #break::before {
-    content: "\a";
-    white-space: pre;
   }
 
   #about-main {
@@ -515,6 +510,7 @@ form input[type=submit] {
   }
 
   #about-heading {
+    width: 100%;
     background:
       url(images/aboutDesktop1.png) right 0% top -50px no-repeat,
       url(images/aboutDesktop2.png) left 0% bottom 0% no-repeat;
